--- a/pagina_ia.html
+++ b/pagina_ia.html
@@ -1,56 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tu Página</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Cabecera -->
     <header>
-        <h1>Vive la Pasión del Fútbol</h1>
-        <h2>Viaja a los mejores partidos del mundo</h2>
-        <img src="neymarjr-1.jpg" alt="Neymar Jr en tiro libre" class="header-image">
+        <div class="header-overlay">
+            <h1>Bienvenidos al Sitio</h1>
+            <p>Tu lugar para los mejores productos y servicios</p>
+        </div>
     </header>
 
-    <section class="benefits">
-        <h3>Beneficios de Viajar con Nosotros</h3>
+    <!-- Barra de navegación -->
+    <nav class="navbar">
         <ul>
-            <li>Acceso a entradas exclusivas</li>
-            <li>Paquetes completos de viaje</li>
-            <li>Experiencias únicas en el estadio</li>
+            <li><a href="#introduccion">Introducción</a></li>
+            <li><a href="#productos">Productos</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </ul>
-        <img src="bernabeu-1.jpg" alt="Santiago Bernabéu">
+    </nav>
+
+    <!-- Sección Introducción -->
+    <section id="introduccion" class="section introduccion">
+        <h2>Introducción</h2>
+        <p>Bienvenido a nuestro sitio web. Aquí encontrarás información sobre nuestros productos, servicios y más.</p>
     </section>
 
-    <section class="testimonials">
-        <h3>Lo Que Dicen Nuestros Clientes</h3>
-        <blockquote>"Un viaje inolvidable. ¡Repetiré sin duda!" - Juan P.</blockquote>
-        <blockquote>"La mejor experiencia para un amante del fútbol." - Laura M.</blockquote>
-    </section>
-
-    <section class="cta">
-        <h3>¡Reserva Tu Aventura de Fútbol Hoy!</h3>
-        <a href="#form" class="cta-button">Reserva Ahora</a>
-    </section>
-
-    <section class="faq">
-        <h3>Preguntas Frecuentes</h3>
-        <p><strong>¿Ofrecen paquetes para grupos?</strong><br>Sí, tenemos opciones para grupos y familias.</p>
-        <p><strong>¿Puedo cancelar mi viaje?</strong><br>Consulta nuestras políticas de cancelación.</p>
-    </section>
-
-    <footer>
-        <div class="contact-form">
-            <h3>Contáctanos</h3>
-            <form action="#" method="post">
-                <input type="text" placeholder="Tu Nombre" required>
-                <input type="email" placeholder="Tu Correo" required>
-                <textarea placeholder="Tu Mensaje" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
+    <!-- Sección Productos -->
+    <section id="productos" class="section productos">
+        <h2>Productos Destacados</h2>
+        <div class="productos-container">
+            <div class="card-container">
+                <div class="card">
+                    <img src="granada.jpg" alt="Producto 1" class="card-image">
+                    <div class="card-content">
+                        <h3>Visitas a Estadios</h3>
+                        <p>Desde los mas recónditos hasta los mas grandes del planeta</p>
+                        <button>Ver más</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="camiseta.jpg" alt="Producto 2" class="card-image">
+                    <div class="card-content">
+                        <h3>Camisetas Originales</h3>
+                        <p>!Con Suerte,te podrá tocar una firma original!</p>
+                        <button>Ver más</button>
+                    </div>
+                </div>
+                <!-- Agregar más productos aquí -->
+            </div>
         </div>
-        <p>&copy; 2024 Agencia de Viajes de Fútbol. Todos los derechos reservados.</p>
+    </section>
+
+    <!-- Sección Servicios -->
+    <section id="servicios" class="section servicios">
+        <h2>Servicios Exclusivos</h2>
+        <div class="servicio-contenedor">
+            <div class="servicio">
+                <img src="avion.jpeg" alt="Servicio 1" class="servicio-imagen">
+                <div class="servicio-texto">
+                    <h3>Vuelos en primera clase  junto con alojamientos</h3>
+                </div>
+            </div>
+            <div class="servicio">
+                <img src="ticket.jpg" alt="Servicio 2" class="servicio-imagen">
+                <div class="servicio-texto">
+                    <h3>Asientos Vip con vistas espectaculares</h3>
+                </div>
+            </div>
+            <div class="servicio">
+                <img src="virtual.jpg" alt="Servicio 3" class="servicio-imagen">
+                <div class="servicio-texto">
+                    <h3>Tour guiados virtualmente</h3>
+                </div>
+            </div>
+            <!-- Agregar más servicios aquí -->
+        </div>
+    </section>
+
+    <!-- Sección Contacto -->
+    <section id="contacto" class="section contacto">
+        <h2>Contacto</h2>
+        <form action="#" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+
+    <!-- Pie de página -->
+    <footer class="footer">
+        <p>&copy; 2024 Tu Página. Todos los derechos reservados.</p>
+        <div class="social-icons">
+            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+        </div>
     </footer>
+
 </body>
 </html>
