Terminamos pagina con IA

--- a/pagina_ia.html
+++ b/pagina_ia.html
@@ -27,7 +27,7 @@
     </nav>
 
     <!-- Sección Introducción -->
-    <section id="introduccion" class="section introduccion">
+    <section id="introduccion" class="section ">
         <h2>Introducción</h2>
         <p>Bienvenido a nuestro sitio web. Aquí encontrarás información sobre nuestros productos, servicios y más.</p>
     </section>
@@ -102,9 +102,9 @@
     <footer class="footer">
         <p>&copy; 2024 Tu Página. Todos los derechos reservados.</p>
         <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="#"><img src="logofb.png" alt="Facebook"></a>
+            <a href="#"><img src="logoinsta.png" alt="Twitter"></a>
+            <a href="#"><img src="logotwitter.jpg" alt="Instagram"></a>
         </div>
     </footer>
 
