--- a/pagina_ia.html
+++ b/pagina_ia.html
@@ -29,7 +29,11 @@
     <!-- Sección Introducción -->
     <section id="introduccion" class="section ">
         <h2>Introducción</h2>
-        <p>Bienvenido a nuestro sitio web. Aquí encontrarás información sobre nuestros productos, servicios y más.</p>
+        <p>El fútbol no es solo un deporte, es una pasión que conecta a millones de personas en todo el mundo. 
+            Cada estadio guarda historias de triunfos, derrotas y momentos inolvidables que emocionan a generaciones. 
+            Aquí, te acercamos a esa experiencia única, desde visitas a estadios emblemáticos hasta colecciones exclusivas que celebran la esencia del fútbol.
+            Nuestra misión es llevarte más allá del juego, ofreciéndote vivencias que quedarán en tu memoria. 
+            Ya sea vibrando con un partido en vivo o descubriendo los secretos de los clubes más legendarios, queremos que formes parte de esta pasión.</p>
     </section>
 
     <!-- Sección Productos -->
@@ -49,7 +53,7 @@
                     <img src="camiseta.jpg" alt="Producto 2" class="card-image">
                     <div class="card-content">
                         <h3>Camisetas Originales</h3>
-                        <p>!Con Suerte,te podrá tocar una firma original!</p>
+                        <p>¡Con Suerte te podrá tocar una firma original!</p>
                         <button>Ver más</button>
                     </div>
                 </div>
