--- a/pagina_ia.html
+++ b/pagina_ia.html
@@ -104,7 +104,7 @@
 
     <!-- Pie de página -->
     <footer class="footer">
-        <p>&copy; 2024 Tu Página. Todos los derechos reservados.</p>
+        <p>&copy; Alvaro Robles</p>
         <div class="social-icons">
             <a href="#"><img src="logofb.png" alt="Facebook"></a>
             <a href="#"><img src="logoinsta.png" alt="Twitter"></a>
